--- a/templates/promotion/_form.html.twig
+++ b/templates/promotion/_form.html.twig
@@ -1,4 +1,10 @@
+<div class="mb-3 d-flex p-2">
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="d-flex flex-column p-5">
+    Nom : {{ form_widget(form.nom) }}
+    Formateur : {{ form_widget(form.formateur) }}
+    Formation : {{ form_widget(form.formation) }}
+    <button class="btn btn-primary mt-3">{{ button_label|default('Enregistrer') }}</button>
+    </div>
 {{ form_end(form) }}
+</div>
