--- a/templates/promotion/edit.html.twig
+++ b/templates/promotion/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Promotion{% endblock %}
+{% block title %}Editer la promotion{% endblock %}
 
 {% block body %}
-    <h1>Edit Promotion</h1>
+<div class="p-5">
+    <h1>Editer la promotion</h1>
 
-    {{ include('promotion/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_promotion_index') }}">back to list</a>
-
+    {{ include('promotion/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('promotion/_delete_form.html.twig') }}
+
+    <a href="{{ path('app_promotion_index') }}">Retourner à la liste des promotions</a>
+</div>
 {% endblock %}
