--- a/templates/promotion/index.html.twig
+++ b/templates/promotion/index.html.twig
@@ -3,34 +3,33 @@
 {% block title %}Les promotions{% endblock %}
 
 {% block body %}
-    <h1>Liste des promotions</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nom</th>
-                <th>Formation</th>
-                <th>Formateur</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for promotion in promotions %}
-            <tr>
-                <td>{{ promotion.nom }}</td>
-                <td>{{ promotion.formation }}</td>
-                <td>{{ promotion.formateur }}</td>
-                <td>
-                    <a href="{{ path('app_promotion_show', {'id': promotion.id}) }}">show</a>
-                    <a href="{{ path('app_promotion_edit', {'id': promotion.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_promotion_new') }}">Create new</a>
+    <div class="p-5">
+        <h1>Liste des promotions</h1>
+        <a type="button" class="btn btn-primary" href="{{ path('app_promotion_new') }}">Créer une nouvelle promotion</a>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Formation</th>
+                    <th>Formateur</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for promotion in promotions %}
+                <tr>
+                    <td>{{ promotion.nom }}</td>
+                    <td>{{ promotion.formation }}</td>
+                    <td>{{ promotion.formateur }}</td>
+                    <td>
+                        <a  type="button" class="btn btn-secondary" href="{{ path('app_promotion_edit', {'id': promotion.id}) }}">Modifier</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="3">Aucune promotion</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
