--- a/templates/formateur/edit.html.twig
+++ b/templates/formateur/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Formateur{% endblock %}
+{% block title %}Modifier Formateur{% endblock %}
 
 {% block body %}
-    <h1>Edit Formateur</h1>
+<div class="p-5">
+    <h1>Modifier Formateur</h1>
 
-    {{ include('formateur/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_formateur_index') }}">back to list</a>
-
+    {{ include('formateur/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('formateur/_delete_form.html.twig') }}
+    <a href="{{ path('app_formateur_index') }}"><-- Retourner à la liste des formateurs</a>
+</div>
 {% endblock %}
