--- a/templates/formateur/index.html.twig
+++ b/templates/formateur/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Formateur index{% endblock %}
+{% block title %}Liste des formateurs{% endblock %}
 
 {% block body %}
-    <h1>Formateur index</h1>
-
+<div class="p-5">
+    <h1>Liste des formateurs</h1>
+    <a type="button" class="btn btn-primary" href="{{ path('app_formateur_new') }}">Ajouter un formateur</a>
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nom</th>
                 <th>Prenom</th>
                 <th>Numero</th>
@@ -19,23 +19,20 @@
         <tbody>
         {% for formateur in formateurs %}
             <tr>
-                <td>{{ formateur.id }}</td>
                 <td>{{ formateur.nom }}</td>
                 <td>{{ formateur.prenom }}</td>
                 <td>{{ formateur.numero }}</td>
                 <td>{{ formateur.email }}</td>
                 <td>
-                    <a href="{{ path('app_formateur_show', {'id': formateur.id}) }}">show</a>
-                    <a href="{{ path('app_formateur_edit', {'id': formateur.id}) }}">edit</a>
+                    <a type="button" class="btn btn-secondary" href="{{ path('app_formateur_edit', {'id': formateur.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Aucun formateur</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_formateur_new') }}">Create new</a>
+</div>
 {% endblock %}
