--- a/templates/formation/edit.html.twig
+++ b/templates/formation/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Formation{% endblock %}
+{% block title %}Modifier formation{% endblock %}
 
 {% block body %}
-    <h1>Edit Formation</h1>
+<div class="p-5">
+    <h1>Modifier formation</h1>
 
-    {{ include('formation/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_formation_index') }}">back to list</a>
-
+    {{ include('formation/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('formation/_delete_form.html.twig') }}
+    <a href="{{ path('app_formation_index') }}"><-- Retourner à la liste des formations</a>
+</div>
 {% endblock %}
