--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -3,12 +3,12 @@
 {% block title %}Formation index{% endblock %}
 
 {% block body %}
+<div class="p-5">
     <h1>Formation index</h1>
-
+    <a type="button" class="btn btn-primary" href="{{ path('app_formation_new') }}">Ajouter une formation</a>
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Intitule</th>
                 <th>actions</th>
             </tr>
@@ -16,20 +16,17 @@
         <tbody>
         {% for formation in formations %}
             <tr>
-                <td>{{ formation.id }}</td>
                 <td>{{ formation.intitule }}</td>
                 <td>
-                    <a href="{{ path('app_formation_show', {'id': formation.id}) }}">show</a>
-                    <a href="{{ path('app_formation_edit', {'id': formation.id}) }}">edit</a>
+                    <a  type="button" class="btn btn-secondary" href="{{ path('app_formation_edit', {'id': formation.id}) }}">Editer</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucune formation</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_formation_new') }}">Create new</a>
+<div class="p-5">
 {% endblock %}
