--- a/templates/formation/new.html.twig
+++ b/templates/formation/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Formation{% endblock %}
+{% block title %}Ajouter une formation{% endblock %}
 
 {% block body %}
-    <h1>Create new Formation</h1>
+<div class="p-5">
+    <h1>Ajouter une formation</h1>
 
     {{ include('formation/_form.html.twig') }}
 
-    <a href="{{ path('app_formation_index') }}">back to list</a>
+    <a href="{{ path('app_formation_index') }}"><- Retourner à la liste des formations</a>
+</div>
 {% endblock %}
