--- a/templates/organisme/new.html.twig
+++ b/templates/organisme/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Organisme{% endblock %}
+{% block title %}Ajouter organisme{% endblock %}
 
 {% block body %}
-    <h1>Create new Organisme</h1>
+<div class="p-5">
+    <h1>Ajouter organisme</h1>
 
     {{ include('organisme/_form.html.twig') }}
 
-    <a href="{{ path('app_organisme_index') }}">back to list</a>
+    <a href="{{ path('app_organisme_index') }}">Retourner à la liste des organismes</a>
+<div class="p-5">
 {% endblock %}
