--- a/templates/organisme/_form.html.twig
+++ b/templates/organisme/_form.html.twig
@@ -1,4 +1,12 @@
+<div class="mb-3 d-flex p-2">
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="d-flex flex-column p-5">
+    {# {{ form_widget(form) }} #}
+    Nom : {{ form_widget(form.nom) }}
+    Adresse : {{ form_widget(form.adresse) }}
+    Numéro de téléphone : {{ form_widget(form.numero_tel) }}
+    Email : {{ form_widget(form.email_contact) }}
+    <button class="btn btn-primary mt-3">{{ button_label|default('Enregistrer') }}</button>
+</div>
 {{ form_end(form) }}
+</div>
