--- a/templates/organisme/edit.html.twig
+++ b/templates/organisme/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Organisme{% endblock %}
+{% block title %}Editer Organisme{% endblock %}
 
 {% block body %}
-    <h1>Edit Organisme</h1>
+<div class="p-5">
+    <h1>Editer Organisme</h1>
 
-    {{ include('organisme/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_organisme_index') }}">back to list</a>
-
+    {{ include('organisme/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('organisme/_delete_form.html.twig') }}
+    <a href="{{ path('app_organisme_index') }}">Retourner à la liste des organismes</a>
+</div>
 {% endblock %}
