--- a/templates/salle/index.html.twig
+++ b/templates/salle/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Salle index{% endblock %}
+{% block title %}Les salles{% endblock %}
 
 {% block body %}
-    <h1>Salle index</h1>
-
+<div class="p-5">
+    <h1>Liste des salles</h1>
+    <a type="button" class="btn btn-primary" href="{{ path('app_salle_new') }}">Ajouter une salle</a>
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Nom</th>
                 <th>actions</th>
             </tr>
@@ -16,20 +16,17 @@
         <tbody>
         {% for salle in salles %}
             <tr>
-                <td>{{ salle.id }}</td>
                 <td>{{ salle.nom }}</td>
                 <td>
-                    <a href="{{ path('app_salle_show', {'id': salle.id}) }}">show</a>
-                    <a href="{{ path('app_salle_edit', {'id': salle.id}) }}">edit</a>
+                    <a type="button" class="btn btn-secondary" href="{{ path('app_salle_edit', {'id': salle.id}) }}">Editer</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucune salle</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_salle_new') }}">Create new</a>
+</div>
 {% endblock %}
