--- a/templates/session/_form.html.twig
+++ b/templates/session/_form.html.twig
@@ -1,4 +1,14 @@
+<div class="mb-3 d-flex p-2">
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="d-flex flex-column p-5">
+    {# {{ form_widget(form) }} #}
+    Nom : {{ form_widget(form.nom) }}
+    Date de début : {{ form_widget(form.date_debut) }}
+    Date de fin : {{ form_widget(form.date_fin) }}
+    Salle : {{ form_widget(form.accueille) }}
+    Formateur : {{ form_widget(form.formateur_id) }}
+    Promotion : {{ form_widget(form.promotion_id) }}
+    <button class="btn btn-primary mt-3">{{ button_label|default('Enregistrer') }}</button>
+</div>
 {{ form_end(form) }}
+</div>
