--- a/templates/session/new.html.twig
+++ b/templates/session/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Session{% endblock %}
+{% block title %}Nouvelle Session{% endblock %}
 
 {% block body %}
-    <h1>Create new Session</h1>
+<div class="p-5">
+    <h1>Créer une nouvelle Session</h1>
 
     {{ include('session/_form.html.twig') }}
 
-    <a href="{{ path('app_session_index') }}">back to list</a>
+    <a href="{{ path('app_session_index') }}">Retourner à la liste des sessions</a>
+</div>
 {% endblock %}
