--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Formation index{% endblock %}
+{% block title %}Liste des formations{% endblock %}
 
 {% block body %}
 <div class="p-5">
-    <h1>Formation index</h1>
+    <h1>Liste des formations</h1>
     <a type="button" class="btn btn-primary" href="{{ path('app_formation_new') }}">Ajouter une formation</a>
     <table class="table">
         <thead>
