--- a/templates/organisme/index.html.twig
+++ b/templates/organisme/index.html.twig
@@ -12,7 +12,7 @@
                 <th>Nom</th>
                 <th>Adresse</th>
                 <th>Numero_tel</th>
-                <th>Email_contact</th>
+                <th>Email contact</th>
                 <th>actions</th>
             </tr>
         </thead>
