ajout colonne formation vue pour candidat

--- a/templates/candidat/show.html.twig
+++ b/templates/candidat/show.html.twig
@@ -27,6 +27,14 @@
                 <th>Numero_tel</th>
                 <td>{{ candidat.numeroTel }}</td>
             </tr>
+            <tr>
+                <th>Promotion</th>
+                <td>{{ candidat.promotionId}}</td>
+            </tr>
+            <tr>
+                <th>Formation</th>
+                <td>{{ candidat.promotionId.formation }}</td>
+            </tr>
         </tbody>
     </table>
 
