--- a/templates/candidat/index.html.twig
+++ b/templates/candidat/index.html.twig
@@ -14,6 +14,7 @@
                 <th>Email</th>
                 <th>Numero teléphone</th>
                 <th>promotions</th>
+                <th>formations</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -25,6 +26,11 @@
                 <td>{{ candidat.emailContact }}</td>
                 <td>{{ candidat.numeroTel }}</td>
                 <td>{{ candidat.promotionId}}</td>
+                {% if candidat.promotionId.formation is defined %}
+                    <td>{{ candidat.promotionId.formation}}</td>
+                {% else %}
+                    <td></td>
+                {% endif %}
                 <td>
                     <a type="button" class="btn btn-secondary" href="{{ path('app_candidat_edit', {'id': candidat.id}) }}">Modifier</a>
                 </td>
