ajout colonne formateur et promotion tableau vue session

--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -11,6 +11,7 @@
             <tr>
                 <th>Intitule</th>
                 <th>organisme</th>
+                <th>contact organisme</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -19,6 +20,7 @@
             <tr>
                 <td>{{ formation.intitule }}</td>
                 <td>{{ formation.organismeid }}</td>
+                <td>{{ formation.organismeid.numeroTel }}</td>
                 <td>
                     <a type="button" class="btn btn-secondary" href="{{ path('app_formation_edit', {'id': formation.id}) }}">Editer</a>
                 </td>
